--- a/index_3.html
+++ b/index_3.html
@@ -6,6 +6,36 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <h1>DragonBall Z Fan Page</h1>
+    <p>Welcome to a DragonBall Z Fan Page</p>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index_2.html">Characters</a></li>
+      <li><a href="index_3.html">Saga</a></li>
+    </ul>
+    </header>
+    <main>
+      <h2>DragonBall Z Saga's</h2>
+      <p>Here is a list of all the DragonBall Z Sagas and there episode list:</p>
+<table>
+      <tr>
+        <th>Show List: </th>
+        <th>Saiyan Saga</th>
+        <th>Frieza Saga</th>
+        <th>Android Saga</th>
+        <th>Cell Saga</th>
+        <th>Buu Saga</th>
+      </tr>
+      <tr>
+        <td>Episode Count</td>
+        <td>35</td>
+        <td>33</td>
+        <td>14</td>
+        <td>29</td>
+        <td>34</td>
+      </tr>
+    </table>
+    </main>
 </body>
 </html>
