Add a 3rd row to table chart on index_3 html page.

--- a/index_3.html
+++ b/index_3.html
@@ -28,12 +28,20 @@
         <th>Buu Saga</th>
       </tr>
       <tr>
-        <td>Episode Count</td>
+        <td>Ep. Count: </td>
         <td>35</td>
         <td>33</td>
         <td>14</td>
         <td>29</td>
         <td>34</td>
+      </tr>
+      <tr>
+        <td>Transform List:</td>
+        <td>Normal Saiyan</td>
+        <td>Super Saiyan(SSJ)</td>
+        <td>SSJ Asended</td>
+        <td>SSJ2</td>
+        <td>SSJ3</td>
       </tr>
     </table>
     </main>
