Had the incorrect name saved under index_2.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>DragonBall Z Fan Page</h1>
+    <img src="https://www.crunchyroll.com/imgsrv/display/thumbnail/1200x675/catalog/crunchyroll/36bdc5ea4443cd8e42f22ec7d3884cbb.jpe" width="700px" height="400px" alt="DragonBall Z Logo" />
     <p>Welcome to a DragonBall Z Fan Page</p>
     <ul>
       <li><a href="index.html">Home</a></li>
