--- a/index_2.html
+++ b/index_2.html
@@ -17,11 +17,11 @@
     </header>
     <main>
       <h2>Characters</h2>
-      <p>Meet Goku! Also known as Kakorat. He is the loveable lighthearted Saiyan. Goku is the father to Gohan and Goten. He is from the plant Vegeta and is a full blood Saiyan. He is also the strong DragonBall Z fighter.</p>
+      <p>Meet Goku! Also known as Kakorat. He is the loveable lighthearted Saiyan. Goku is the father to Gohan and Goten. He is from the plant Vegeta and is a full blood Saiyan. He is also the strongest DragonBall Z fighter.</p>
       <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" height='800px' width='400px' alt="DBZ Goku Img">
       <p>Meet Gohan! Gohan is the son of Goku and is hightly intelligent. From birth Gohan has always far exceed his expectation as a fighter. In his older years he become an amazing scholar at the requet of his mother, Chi-Chi. </p>
       <img src="https://files.cults3d.com/uploaders/15659425/illustration-file/b05d8dde-e3d3-441e-aa17-75d40ab34234/285-2858388_gohan-ssj2-png-son-gohan-ssj2-png-transparent.png" height='800px' width='500px'  alt="DBZ Gohan Img">
-      <p>Meet Gohan! Gohan is the 2nd son of Goku and has always shown great ambition in his figthing skill. With his best friend Trunks they like to get into some trouble, but he always trys to be the voice of reason.</p>
+      <p>Meet Goten! Goten is the 2nd son of Goku and has always shown great ambition in his figthing skill. With his best friend Trunks they like to get into some trouble, but he always trys to be the voice of reason.</p>
       <img src="https://images4.alphacoders.com/652/652183.png" height='500px' width='500px' alt="DBZ Gohan Img">
     </main>
 </body>
