add nav tag to main navigation between pages

--- a/index_3.html
+++ b/index_3.html
@@ -9,11 +9,13 @@
     <header>
       <h1>DragonBall Z Fan Page</h1>
       <p>Welcome to a DragonBall Z Fan Page</p>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index_2.html">Characters</a></li>
-        <li><a href="index_3.html">Saga</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index_2.html">Characters</a></li>
+          <li><a href="index_3.html">Saga</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <h2>DragonBall Z Saga's</h2>
